# cpp_rtype

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  RFC R-Type.mht  installer.nsi  test.sh
Entities/: CMakeLists.txt
Entities/include/: AActor.hh  BasicEntity.hh  BasicNastyEntity.hh  IDamager.hh  Obstacle.hh  PowerUp.hh  Projectile.hh
Entities/src/: Attack.cpp  BasicEntity.cpp  BasicNastyEntity.cpp  Monster.cpp  Obstacle.cpp  PowerUp.cpp  Projectile.cpp
Entities/tests/: BasicEntityTest.cpp  BasicNastyEntityTest.cpp  CMakeLists.txt  ObstacleTest.cpp  PowerUpTest.cpp  ProjectileTest.cpp
client/: CMakeLists.txt
client/include/: #ScopedLock.hpp#  AMenu.hh  Definitions.hh  Entity.hh  EventManager.hh  GameClient.hh  GameUIInterface.hh  GameUIInterface.hh~  IEventHandler.hh  IGameClient.hh  Information.hh  Machine.hpp  Menu.hh  NetworkManager.hh  SL.hpp  State.hpp  TouchDefinition.hh  World.hh  networkManager.hh
client/include/UI/: AItem.hh  ALayer.hh  AudioManager.hh  Background.hh  BackgroundLayer.hh  BackgroundObject.hh  Button.hh  CreditLayer.hh  EventObserver.hh  GameLayer.hh  HUDLayer.hh  IAudioManager.hh  IEventObserver.hh  ILayer.hh  IWindow.hh  Item.hh  ItemFactory.hh  LayerFactory.hh  MenuLayer.hh  Text.hh  UIManager.hh  Window.hh
client/include/listener/: ClientListenerCancelEvent.hh  ClientListenerDeleteEntity.hh  ClientListenerDisconnect.hh  ClientListenerErrorGame.hh  ClientListenerErrorHandShake.hh  ClientListenerErrorList.hh  ClientListenerEventError.hh  ClientListenerGameData.hh  ClientListenerGameList.hh  ClientListenerLeaderBoard.hh  ClientListenerMoveEntity.hh  ClientListenerPlaySound.hh  ClientListenerPlayerData.hh  ClientListenerQuit.hh  ClientListenerSpawnEntity.hh  ClientListenerSynAck.hh  ClientListenerSynchronization.hh  ClientListenerUpdateEntity.hh  ClientListernerPong.hh
client/resources/: resources.rc
client/src/: Entity.cpp  EventManager.cpp  GameClient.cpp  GameUIInterface.cpp  GameUIInterface.cpp~  IGameClient.cpp  Menu.cpp  NetworkManager.cpp  TouchDefinition..cpp  TouchDefinition.cpp  World.cpp  main.cpp  networkManager.cpp
client/src/UI/: AItem.cpp  ALayer.cpp  AMenu.cpp  AudioManager.cpp  Background.cpp  BackgroundLayer.cpp  BackgroundObject.cpp  Button.cpp  CreditLayer.cpp  EventObserver.cpp  GameLayer.cpp  HUDLayer.cpp  IAudioManager.cpp  Item.cpp  ItemFactory.cpp  LayerFactory.cpp  MenuLayer.cpp  Text.cpp  UIManager.cpp  Window.cpp
client/src/listener/: ClientListenerCancelEvent.cpp  ClientListenerDeleteEntity.cpp  ClientListenerDisconnect.cpp  ClientListenerErrorGame.cpp  ClientListenerErrorHandShake.cpp  ClientListenerErrorList.cpp  ClientListenerEventError.cpp  ClientListenerGameData.cpp  ClientListenerGameList.cpp  ClientListenerLeaderBoard.cpp  ClientListenerMoveEntity.cpp  ClientListenerPlaySound.cpp  ClientListenerPlayerData.cpp  ClientListenerQuit.cpp  ClientListenerSpawnEntity.cpp  ClientListenerSynAck.cpp  ClientListenerSynchronization.cpp  ClientListenerUpdateEntity.cpp  ClientListernerPong.cpp
client/tests/: CMakeLists.txt  UITest.cpp
core/: CMakeLists.txt
core/include/: Definitions.hh
core/include/Explorer/: FileExplorer.hh  IExplorer.hh  WindowsFileExplorer.hh
core/include/JSON/: IJson.hpp  JsonArr.hpp  JsonObj.hpp  JsonParser.hpp  JsonStr.hpp
core/include/entities/: ADynamicObject.hh  APlayer.hh  Entity.hh  EntityAction.hh  EntityData.hh  EntityInitialization.hh  Player.hh  Sprite.hh  VisualFx.hh
core/include/helpers/: Epoch.hh  IStopwatch.hh  Stopwatch.hh  UnixStopwatch.hh  WindowsStopwatch.hh
core/include/network/: PacketFactory.hh
core/include/thread/: IMutex.hh  IThread.hh  Mutex.hh  Mutexer.hh  Thread.hpp
core/src/Explorer/: Explorer.cpp  FileExplorer.cpp  WindowsFileExplorer.cpp
core/src/JSON/: JsonStr.cpp
core/src/entities/: APlayer.cpp  Entity.cpp  EntityAction.cpp  EntityData.cpp  EntityInitialization.cpp  Player.cpp  Sprite.cpp  VisualFx.cpp
core/src/helpers/: Epoch.cpp  Stopwatch.cpp  UnixStopwatch.cpp  WindowsStopwatch.cpp
core/src/network/: PacketFactory.cpp
core/src/thread/: Mutex.cpp  Mutexer.cpp  Thread.cpp
core/tests/: CMakeLists.txt
core/tests/network/: PacketFactoryTest.cpp
entity/: CMakeLists.txt
entity/include/: Attack.hh  BasicEntity.hh  BasicNastyEntity.hh  BluePlayer.hh  Bomber.hh  CrazyEntity.hh  GreenPlayer.hh  IDamager.hh  Lighter.hh  Monster.hh  Obstacle.hh  Ostwind.hh  PowerUp.hh  Projectile.hh  RedPlayer.hh  Tower.hh  Wunderwaffe.hh  YellowPlayer.hh  Zeppelin.hh
entity/src/: BasicEntity.cpp  BasicNastyEntity.cpp  BluePlayer.cpp  Bomber.cpp  CrazyEntity.cpp  GreenPlayer.cpp  Lighter.cpp  Obstacle.cpp  Ostwind.cpp  PowerUp.cpp  RedPlayer.cpp  Tower.cpp  Wunderwaffe.cpp  YellowPlayer.cpp  Zeppelin.cpp
entity/tests/: BasicEntityTest.cpp  CMakeLists.txt
protoboeuf/: CMakeLists.txt
protoboeuf/tests/: CMakeLists.txt
server/: CMakeLists.txt
server/include/: AActor.hh  AEntity.hh  Attack.hh  Client.hh  CollisionWall.hh  Controller.hh  Core.hh  EntityAction.hh  Game.hh  Grid.hh  IEntity.hh  IPlayer.hh  IThread.hpp  Level.hh  NetworkManager.hh  Player.hh  Spawn.hh  Thread.hpp  definitions.hh
server/include/Explorer/: FileExplorer.hh  IExplorer.hh
server/include/LibLoader/: IDlLoader.hh  UnixDlLoader.hpp  WinDlLoader.hpp  getDlLoader.hpp
server/include/entities/: AActor.hh  ADynamicObject.hh  APlayer.hh  Entity.hh  EntityAction.hh  EntityData.hh  EntityInitialization.hh  Player.hh  Sprite.hh
server/include/events/: AGameEvent.hh  Destroy.hh  IGameEvent.hh  ModHP.hh  Move.hh  Spawn.hh  Timeline.hh
server/include/helpers/: ClientContainer.hh  IStopwatch.hh  Stopwatch.hh  (+2 more)
server/src/: AActor.cpp  AEntity.cpp  Attack.cpp  Client.cpp  CollisionWall.cpp  Controller.cpp  Core.cpp  EntityAction.cpp  EntityFactory.cpp  Game.cpp  Grid.cpp  Level.cpp  NetworkManager.cpp  Player.cpp  Spawn.cpp  Thread.cpp  main.cpp
server/tests/: CMakeLists.txt  CollisionTest.cpp  CollisionTest_2.cpp  JoinQuitTest.cpp  NetworkManagerTest.cpp  NetworkManagerTester.cpp  PlayerAttackAndMoveTest.cpp  ProjTester.cpp  ProjTester.hpp  RegisterTest.cpp
(+206 files in other folders)
